# hal_microchip

./: .gitignore  README.txt
mec5/: CMakeLists.txt
mec5/devices/: CMakeLists.txt  device_mec5.h
mec5/devices/MEC165XB/: mec165xb.h  mec165xb_specs.h
mec5/devices/MEC174X/: mec1743_qlj.h  mec1743_qsz.h  mec174x.h  mec174x_specs.h
mec5/devices/MEC175X/: mec1753_qlj.h  mec1753_qsz.h  mec175x.h  mec175x_specs.h
mec5/devices/MECH172X/: mech172x_specs.h
mec5/devices/common/: mec5_acpi_ec_v1.h  mec5_acpi_pm1_v1.h  mec5_adc_v2.h  mec5_bbled_v1.h  mec5_bcl_v1.h  mec5_bdp_v1.h  mec5_btmr_v1.h  mec5_cct_v1_1.h  mec5_chip_cfg_v1_2.h  mec5_cpu_stall_v1.h  mec5_ctmr_v1.h  mec5_dmac_ch16_v2.h  mec5_dmac_ch20_v2.h  mec5_ecia_v1_5.h  mec5_ecs_v2_4.h  mec5_ecs_v2_5.h  mec5_eeprom_ctrl_v1.h  mec5_emi_v2.h  mec5_espi_io_v1_4.h  mec5_espi_io_v1_5.h  mec5_espi_mem_v1_4.h  mec5_espi_mem_v1_5.h  mec5_espi_taf_v1_4.h  mec5_espi_taf_v1_5.h  mec5_espi_vw_v1_4.h  mec5_espi_vw_v1_5.h  (+44 more)
mec5/drivers/: CMakeLists.txt  mec_acpi_ec.c  mec_acpi_ec_api.h  mec_acpi_ec_regs.h  mec_adc.c  mec_bbled.c  mec_bclink.c  mec_bdp.c  mec_bdp_api.h  mec_btimer.c  mec_btimer_api.h  mec_cct.c  mec_cct_api.h  mec_defs.h  mec_dmac.c  mec_dmac_api.h  mec_ecia.c  mec_ecia_api.h  mec_ecs.c  mec_ecs_api.h  mec_eeprom.c  mec_emi.c  mec_emi_api.h  mec_espi.c  mec_espi_api.h  mec_espi_core.h  mec_espi_fc.c  mec_espi_fc.h  mec_espi_host_dev.c  mec_espi_oob.c  mec_espi_oob.h  mec_espi_pc.c  mec_espi_pc.h  mec_espi_regs.h  mec_espi_taf.c  mec_espi_taf.h  mec_espi_vw.c  mec_espi_vw.h  mec_gpio.c  mec_htimer.c  (+37 more)
(+14 files in other folders)
